// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component App: renders correctly 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "paddingVertical": 10,
    }
  }
>
  <View>
    <RCTScrollView
      data={
        Array [
          Object {
            "buttons": 1,
            "ground": true,
            "id": 1,
            "visiting": false,
          },
          Object {
            "buttons": 2,
            "id": 2,
            "visiting": false,
          },
          Object {
            "buttons": 2,
            "id": 3,
            "visiting": false,
          },
          Object {
            "buttons": 2,
            "id": 4,
            "visiting": false,
          },
          Object {
            "buttons": 2,
            "id": 5,
            "visiting": false,
          },
          Object {
            "buttons": 2,
            "id": 6,
            "visiting": false,
          },
          Object {
            "buttons": 1,
            "id": 7,
            "top": true,
            "visiting": false,
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      invertStickyHeaders={true}
      inverted={true}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      style={
        Array [
          Object {
            "transform": Array [
              Object {
                "scaleY": -1,
              },
            ],
          },
          undefined,
        ]
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "column-reverse",
              },
              Object {
                "transform": Array [
                  Object {
                    "scaleY": -1,
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "grey",
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "height": 50,
                    "marginLeft": 20,
                    "width": 60,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  G
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  UP
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "column-reverse",
              },
              Object {
                "transform": Array [
                  Object {
                    "scaleY": -1,
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "grey",
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "height": 50,
                    "marginLeft": 20,
                    "width": 60,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  2
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  UP
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  2
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Down
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "column-reverse",
              },
              Object {
                "transform": Array [
                  Object {
                    "scaleY": -1,
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "grey",
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "height": 50,
                    "marginLeft": 20,
                    "width": 60,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  3
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  UP
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  3
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Down
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "column-reverse",
              },
              Object {
                "transform": Array [
                  Object {
                    "scaleY": -1,
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "grey",
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "height": 50,
                    "marginLeft": 20,
                    "width": 60,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  4
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  UP
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  4
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Down
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "column-reverse",
              },
              Object {
                "transform": Array [
                  Object {
                    "scaleY": -1,
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "grey",
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "height": 50,
                    "marginLeft": 20,
                    "width": 60,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  5
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  UP
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  5
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Down
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "column-reverse",
              },
              Object {
                "transform": Array [
                  Object {
                    "scaleY": -1,
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "grey",
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "height": 50,
                    "marginLeft": 20,
                    "width": 60,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  6
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  UP
                </Text>
              </View>
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  6
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Down
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "flexDirection": "column-reverse",
              },
              Object {
                "transform": Array [
                  Object {
                    "scaleY": -1,
                  },
                ],
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "borderColor": "grey",
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "height": 50,
                    "marginLeft": 20,
                    "width": 60,
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "grey",
                    "borderWidth": 1,
                    "marginHorizontal": 10,
                    "opacity": 1,
                    "padding": 10,
                    "width": 100,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Lift floor 
                  7
                </Text>
                <Text
                  style={
                    Object {
                      "alignSelf": "center",
                    }
                  }
                >
                  Down
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "flex": 1,
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      accessibilityRole="button"
      accessibilityState={Object {}}
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {},
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#007AFF",
                "fontSize": 18,
                "margin": 8,
                "textAlign": "center",
              },
              Object {
                "color": "#841584",
              },
            ]
          }
        >
          Start Run
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`App component renderItem: renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "borderColor": "grey",
      "borderWidth": 1,
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "height": 50,
          "marginLeft": 20,
          "width": 60,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "center",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "marginHorizontal": 10,
          "opacity": 1,
          "padding": 10,
          "width": 100,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "center",
          }
        }
      >
        Lift floor 
        G
      </Text>
      <Text
        style={
          Object {
            "alignSelf": "center",
          }
        }
      >
        UP
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "grey",
          "borderWidth": 1,
          "marginHorizontal": 10,
          "opacity": 1,
          "padding": 10,
          "width": 100,
        }
      }
    >
      <Text
        style={
          Object {
            "alignSelf": "center",
          }
        }
      >
        Lift floor 
        G
      </Text>
      <Text
        style={
          Object {
            "alignSelf": "center",
          }
        }
      >
        Down
      </Text>
    </View>
  </View>
</View>
`;
